# coral

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile
.github/workflows/: validate.yml
crates/coral-app/: AGENTS.md  Cargo.toml
crates/coral-app/tests/: telemetry_local_trace_lifecycle.rs
crates/coral-cli/src/: lib.rs  onboard.rs  source_ops.rs
crates/coral-cli/tests/: cli_e2e.rs  source.rs
crates/coral-engine/: Cargo.toml
crates/coral-engine/src/: composition.rs
crates/coral-engine/src/backends/http/: client.rs  fetch.rs  mod.rs  registration_checks.rs  response.rs  trace.rs  transport.rs
crates/coral-engine/src/backends/shared/: filter_expr.rs
crates/coral-engine/src/contracts/: query.rs
crates/coral-engine/src/runtime/: error.rs
crates/coral-spec/src/: common.rs  lib.rs  schema.rs  validate.rs
docs/: AGENTS.md
docs/guides/: observe-with-opentelemetry.mdx  use-coral-over-mcp.mdx
docs/project/: changelog.mdx  security.mdx
docs/reference/: cli-reference.mdx  community-sources.mdx
sources/community/asana/: README.md  manifest.yaml
sources/community/discord/: manifest.yaml
sources/community/firefox/: README.md  browser_server.py  manifest.yaml
sources/community/ghost/: README.md
sources/community/google_docs/: README.md  manifest.yaml
sources/community/hn/: README.md
sources/community/loops/: README.md  manifest.yaml
sources/community/maven_central/: README.md  manifest.yaml
sources/community/mixpanel/: README.md  manifest.yaml
ui/: index.html
ui/src/: app.css.ts  index.css
xtask/: Cargo.toml
xtask/src/: main.rs  skills.rs
(+51 files in other folders)
