[package]
name = "coral-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
arrow.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
datafusion.workspace = true
datafusion-datasource.workspace = true
datafusion-datasource-json.workspace = true
datafusion-functions-json.workspace = true
datafusion-tracing.workspace = true
futures.workspace = true
httpdate.workspace = true
object_store.workspace = true
opentelemetry.workspace = true
parquet.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
url.workspace = true
urlencoding.workspace = true

coral-spec.workspace = true

[dev-dependencies]
arrow.workspace = true
coral-spec.workspace = true
opentelemetry_sdk = { workspace = true, features = ["testing"] }
parquet.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
wiremock.workspace = true
